# testing-chat

./: .env  .gitignore  config.yaml  csharp.cs  pyproject.toml  run_classification_and_insights.py  testing.py  testing2.py
csv_analyzer/: analyze_thresholds.py  classify_csv.py  columns_analyzer.py  ingest_ground_truth.py  insights_example.py  main.py  multilingual_embeddings_client.py  openai_client.py  optimize_dspy.py  run_workflow.py  threshold_analysis_results.json  xlsx_smart_extractor.py  xlsx_table_extractor.py
data/: analytics.db
insight_outputs/: 20260109_170929_01_early_arrival_alert.csv  20260109_170929_02_procedures_without_staff.csv  20260109_170929_03_late_procedures.csv  20260109_170929_04_procedure_count_by_location.csv  20260109_170929_05_busiest_hours_by_location.csv  20260109_170929_06_employee_shift_summary.csv  20260109_170929_07_procedure_categories.csv
insight_reports/: busiest_hours.csv  coverage_gaps.csv  daily_summary.csv  employee_utilization.csv  late_procedures.csv  procedure_categories.csv  procedures_by_location.csv  summary.csv
reports/: early_arrival_embeddings.csv
results/: 353__shifts - Sheet1.csv  56065_shifts - Sheet1.csv  arrival_report_20260110_223833.csv  arrival_report_20260110_225149.csv  early_arrival_fields.csv  early_arrival_multi.csv  early_arrival_report.csv  early_arrival_report_14077b8e.csv  early_arrival_report_20260110_140428.csv  early_arrival_report_20260110_164036.csv  early_arrival_report_20260110_165147.csv  early_arrival_report_49b1bc46.csv  early_arrival_report_727422d1.csv  early_arrival_report_91b0079a.csv  early_arrival_report_b25a7925.csv  early_arrival_report_ef9bfa76.csv  expensive_employees_report_6015c3dd.csv  expensive_employees_report_7fc3647a.csv  expensive_employees_report_8a89e9c9.csv  gross_profit_report_60fa9028.csv  gross_profit_report_aaf8405a.csv  manpower_cost_report_2902834d.csv  manpower_cost_report_cd670ea8.csv  (+19 more)
(+475 files in other folders)
