[tool.poetry]
name = "testing-chat"
version = "0.1.0"
description = ""
authors = ["NivNavick <nnavick@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pdfreader = "^0.1.15"
pandas = "^2.3.3"
sentence-transformers = "^5.2.0"
psycopg2-binary = "^2.9.9"
pgvector = "^0.3.6"
chromadb = "^0.5.23"
pyyaml = "^6.0.2"
openai = "^2.13.0"
dspy-ai = "^2.6.0"
duckdb = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
