[tool.poetry]
name = "testing-chat"
version = "0.1.0"
description = ""
authors = ["NivNavick <nnavick@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pdfreader = "^0.1.15"
pandas = "^2.3.3"
sentence-transformers = "^5.2.0"
psycopg2-binary = "^2.9.9"
pgvector = "^0.3.6"
chromadb = "^0.5.23"
pyyaml = "^6.0.2"
openai = "^2.13.0"
dspy-ai = "^2.6.0"
duckdb = "^1.1.0"
scikit-learn = "^1.5.0"
# FastAPI and async dependencies
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
python-multipart = "^0.0.17"
asyncpg = "^0.30.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
aioboto3 = "^13.3.0"
boto3 = "^1.35.0"
aiofiles = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
